<resources>
    <string name="app_name">Quranku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Home Fragment</string>
    <string name="tab_text_2">Surat Fragment</string>
    <string name="nama_surat">al-fatihah</string>
    <string name="nomor_surat">1</string>
    <string name="arti_surat">Arti</string>
    <string name="detail_tab_text_1">Surat</string>
    <string name="detail_tab_text_2">Tafsir</string>
    <string name="nama_latin">الفاتحة</string>
    <string name="jumlah_ayat">7 ayat</string>
    <string name="bismillah">بِسْمِ اللّٰهِ الرَّحْمٰنِ الرَّحِيْمِ</string>
    <string name="tab_text_3">Favorite</string>
    <string name="title_home">Home</string>
    <string name="surat">Surat</string>
    <string name="favorit">Favorit\n</string>
    <string name="title_lokasi">lokasi</string>
    <string name="title_bookmark">bookmark</string>
    <string name="title_surat">surat</string>
    <string name="teks_latin_husna">Ar-Rahmânu</string>
    <string name="teks_indo_husna">Yang Maha Pengasih</string>
    <string name="teks_arab_husna">الرَّحْمـٰنُ</string>
    <string name="title_main">main</string>
    <string name="doa_tab_text_0">Quran</string>
    <string name="doa_tab_text_1">Hadits</string>
    <string name="doa_tab_text_2">Pilihan</string>
    <string name="doa_tab_text_3">Harian</string>
    <string name="doa_tab_text_4">Ibadah</string>
    <string name="doa_tab_text_5">Haji</string>
    <string name="doa_tab_text_6">Lainnya</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_husna">Husna</string>
</resources>